k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: exbanka-4
  namespace: exbanka-4
spec:
  parentRefs:
    - name: banka-gw
      namespace: envoy-gateway-system
  hostnames:
    - exbanka-4.radenkovic.rs
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: api-gateway
          port: 8083
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
